// Generated from migration_full.sql

Table brand {
  brand_id int [pk, not null]
  brand_name nvarchar(255)
  brand_description nvarchar(255)
  brand_image_url nvarchar(255)
  brand_website_url nvarchar(255)
  brand_created_at datetimeoffset(7)
  brand_updated_at datetimeoffset(7)
}

Table cart {
  user_id uniqueidentifier [pk, not null]
  variation_id int [pk, not null]
  cart_quantity int
}

Table category {
  category_id int [pk, not null]
  category_name nvarchar(255)
  category_description nvarchar(max)
  category_image_url nvarchar(255)
  category_created_at datetimeoffset(7)
  category_updated_at datetimeoffset(7)
}

Table color {
  color_id int [pk, not null]
  color_name nvarchar(255)
  color_hex_code nvarchar(255)
}

Table comment {
  comment_id int [pk, not null]
  review_id int
  comment_content nvarchar(255)
  comment_created_at datetimeoffset(7)
  comment_updated_at datetimeoffset(7)
}

Table comment_parent {
  comment_id int
  comment_parent_id int
}

Table voucher {
  voucher_id int [pk, not null]
  voucher_status_id int
  voucher_type_id int
  voucher_code nvarchar(20) [not null]
  voucher_value decimal(22, 2)
  voucher_description nvarchar(255)
  voucher_minimum_order_value decimal(22, 2)
  voucher_maximum_value decimal(22, 2)
  voucher_usage_limit int
  voucher_start_date datetimeoffset(7)
  voucher_end_date datetimeoffset(7)
  voucher_created_at datetimeoffset(7)
  voucher_updated_at datetimeoffset(7)
  voucher_usage_count int
}

Table voucher_status {
  voucher_status_id int [pk, not null]
  voucher_status_name nvarchar(255)
}

Table voucher_type {
  voucher_type_id int [pk, not null]
  voucher_type_name nvarchar(255)
}

Table notification {
  notification_id int [pk, not null]
  user_id_sender uniqueidentifier
  notification_title nvarchar(255)
  notification_content nvarchar(max)
  is_notification_draft bit
  notification_created_at datetimeoffset(7)
  notification_updated_at datetimeoffset(7)
}

Table notification_user {
  notification_id int
  user_id uniqueidentifier
  is_notification_viewed bit
  is_notification_deleted bit
}

Table order {
  order_id nvarchar(255) [pk, not null]
  user_id uniqueidentifier
  order_status_id int
  payment_method_id int
  shipping_method_id int
  voucher_id int
  incharge_employee_id uniqueidentifier
  order_date datetimeoffset(7)
  order_total_amount decimal(22, 2)
  order_tracking_number nvarchar(50)
  order_note nvarchar(max)
  order_billing_address nvarchar(255)
  order_expected_delivery_date datetime2(7)
  order_transaction_reference nvarchar(255)
  order_tax numeric(3, 2)
  order_created_at datetimeoffset(7)
  order_updated_at datetimeoffset(7)
}

Table order_status {
  order_status_id int [pk, not null]
  order_status_name nvarchar(255)
}

Table order_variation_single {
  order_id nvarchar(255) [pk, not null]
  variation_single_id int [pk, not null]
  promotion_id int
  variation_price_at_purchase decimal(22, 2) [not null]
}

Table payment_method {
  payment_method_id int [pk, not null]
  payment_method_name nvarchar(255)
}

Table product {
  product_id uniqueidentifier [pk, not null]
  brand_id int
  product_status_id int
  product_name nvarchar(255)
  product_code nvarchar(255)
  product_description nvarchar(max)
  product_created_at datetimeoffset(7)
  product_updated_at datetimeoffset(7)
}

Table product_category {
  product_id uniqueidentifier
  category_id int
}

Table product_status {
  product_status_id int [pk, not null]
  product_status_name nvarchar(255)
}

Table provider {
  provider_id int [pk, not null]
  provider_name nvarchar(255)
  provider_image_url nvarchar(255)
  provider_email nvarchar(255)
  provider_phone nvarchar(12)
  provider_address nvarchar(255)
  provider_created_at datetimeoffset(7)
  provider_updated_at datetimeoffset(7)
}

Table review {
  review_id int [pk, not null]
  product_id uniqueidentifier
  user_id uniqueidentifier
  order_id nvarchar(255)
  review_rating int
}

Table role {
  role_id int [pk, not null]
  role_name nvarchar(255)
}

Table promotion {
  promotion_id int [pk, not null]
  promotion_type_id int
  promotion_status_id int
  promotion_value decimal(22, 2)
  promotion_start_date datetimeoffset(7)
  promotion_end_date datetimeoffset(7)
  promotion_created_at datetimeoffset(7)
  promotion_updated_at datetimeoffset(7)
}

Table promotion_product {
  promotion_id int [pk, not null]
  product_id uniqueidentifier [pk, not null]
}

Table promotion_status {
  promotion_status_id int [pk, not null]
  promotion_status_name nvarchar(255)
}

Table promotion_type {
  promotion_type_id int [pk, not null]
  promotion_type_name nvarchar(255)
}

Table shipping_method {
  shipping_method_id int [pk, not null]
  shipping_method_name nvarchar(255)
}

Table size {
  size_id int [pk, not null]
  size_name nvarchar(255)
}

Table stock {
  stock_id int [pk, not null]
  stock_name nvarchar(255)
  stock_address nvarchar(255)
}

Table stock_variation {
  variation_id int [pk, not null]
  stock_id int [pk, not null]
  stock_quantity int
}

Table transaction {
  transaction_id int [pk, not null]
  stock_id int
  variation_id int
  provider_id int
  incharge_employee_id uniqueidentifier
  transaction_type_id int
  transaction_quantity int
  transaction_date datetimeoffset(6)
  transaction_product_price decimal(22, 2)
}

Table transaction_type {
  transaction_type_id int [pk, not null]
  transaction_type_name nvarchar(255)
}

Table user {
  user_id uniqueidentifier [pk, not null]
  role_id int
  is_user_enabled bit
  user_google_id nvarchar(255)
  user_username nvarchar(255)
  user_password nvarchar(255)
  user_fullname nvarchar(255)
  user_email nvarchar(255)
  user_phone nvarchar(12)
  user_birthdate nvarchar(255)
  user_address nvarchar(255)
  user_image nvarchar(255)
  user_current_payment_method nvarchar(255)
  user_created_at datetimeoffset(7)
  user_updated_at datetimeoffset(7)
}

Table user_voucher {
  user_id uniqueidentifier [pk, not null]
  voucher_id int [pk, not null]
  is_voucher_used bit [not null]
  voucher_used_at datetimeoffset(7)
}

Table variation {
  variation_id int [pk, not null]
  product_id uniqueidentifier
  size_id int
  color_id int
  variation_image nvarchar(max)
  variation_price decimal(22, 2)
}

Table variation_single {
  variation_single_id int [pk, not null]
  variation_single_code nvarchar(255)
  is_variation_single_bought bit
  variation_id int
}

Table wishlist {
  user_id uniqueidentifier
  product_id uniqueidentifier
}

Ref: cart.user_id > user.user_id
Ref: cart.variation_id > variation.variation_id
Ref: comment.review_id > review.review_id
Ref: comment_parent.comment_id > comment.comment_id
Ref: comment_parent.comment_parent_id > comment.comment_id
Ref: voucher.voucher_status_id > voucher_status.voucher_status_id
Ref: voucher.voucher_type_id > voucher_type.voucher_type_id
Ref: notification.user_id_sender > user.user_id
Ref: notification_user.notification_id > notification.notification_id
Ref: notification_user.user_id > user.user_id
Ref: order.voucher_id > voucher.voucher_id
Ref: order.incharge_employee_id > user.user_id
Ref: order.order_status_id > order_status.order_status_id
Ref: order.payment_method_id > payment_method.payment_method_id
Ref: order.shipping_method_id > shipping_method.shipping_method_id
Ref: order.user_id > user.user_id
Ref: order_variation_single.order_id > order.order_id
Ref: order_variation_single.variation_single_id > variation_single.variation_single_id
Ref: product.brand_id > brand.brand_id
Ref: product.product_status_id > product_status.product_status_id
Ref: product_category.category_id > category.category_id
Ref: product_category.product_id > product.product_id
Ref: review.order_id > order.order_id
Ref: review.product_id > product.product_id
Ref: review.user_id > user.user_id
Ref: promotion.promotion_status_id > promotion_status.promotion_status_id
Ref: promotion.promotion_type_id > promotion_type.promotion_type_id
Ref: promotion_product.product_id > product.product_id
Ref: promotion_product.promotion_id > promotion.promotion_id
Ref: stock_variation.stock_id > stock.stock_id
Ref: stock_variation.variation_id > variation.variation_id
Ref: transaction.incharge_employee_id > user.user_id
Ref: transaction.provider_id > provider.provider_id
Ref: transaction.stock_id > stock.stock_id
Ref: transaction.transaction_type_id > transaction_type.transaction_type_id
Ref: transaction.variation_id > variation.variation_id
Ref: user.role_id > role.role_id
Ref: user_voucher.voucher_id > voucher.voucher_id
Ref: user_voucher.user_id > user.user_id
Ref: variation.product_id > product.product_id
Ref: variation.color_id > color.color_id
Ref: variation.size_id > size.size_id
Ref: variation_single.variation_id > variation.variation_id
Ref: wishlist.product_id > product.product_id
Ref: wishlist.user_id > user.user_id
